# machine-learning

./: .gitignore  README.md  pyproject.toml
projects/_template/: README.md
projects/_template/data/: source.json
projects/credit-risk/: README.md
projects/credit-risk/data/: raw.sha256  source.json
projects/credit-risk/notebooks/: 01_eda.ipynb  Accept_rate_optimisation.ipynb
scripts/: download_kaggle.sh  hash_data.sh  verify_data.sh
