[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "kaggle>=2.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
]
